k8s/syncthing.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: infra
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: debianbox
      securityContext:
        fsGroup: 1000
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
            - name: vault
              mountPath: /data/obsidian-vault
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: syncthing-config
        - name: vault
          persistentVolumeClaim:
            claimName: syncthing-vault
